just some visual stuff like font and icons

--- a/Museify/Info.plist
+++ b/Museify/Info.plist
@@ -2,8 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSCameraUsageDescription</key>
-	<string>Museify needs to use your camera to create and participate in hunts!</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Averia-Regular.ttf</string>
+		<string>Monteros.ttf</string>
+	</array>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -22,6 +27,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Museify needs to use your camera to create and participate in hunts!</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Museify needs your location to participate!</string>
 	<key>UIApplicationSceneManifest</key>
